# bharatcode-cli

./: .gitignore  AGENTS.md  BUILDING_DOCKER.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_RECIPES.md  CUSTOM_DISTROS.md  Cargo.toml  Dockerfile  GOVERNANCE.md  Justfile  MODIFICATIONS.md  NOTICE  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RUNNER_STATUS  SECURITY.md  THIRD_PARTY_LICENSES.md  bharatcode-self-test.yaml  deny.toml  download_cli.ps1  download_cli.sh  flake.nix  iterations.md  itrs.md  test_acp_client.py  versions.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bharatcode-issue-solver.yml  bharatcode-pr-reviewer.yml  bharatcode-release-notes.yml  build-cli.yml  build-notify.yml  bundle-desktop-intel.yml  bundle-desktop-linux.yml  bundle-desktop-windows.yml  bundle-desktop.yml  canary.yml  cargo-deny.yml  cargo-machete.yml  ci.yml  dependabot-auto-merge.yml  publish-ask-ai-bot.yml  publish-docker.yml  release-cli.yml  release.yml  scorecard.yml  stale.yml
crates/bharatcode-apply-patch/: Cargo.toml
crates/bharatcode-apply-patch/src/: apply.rs  lib.rs  parser.rs  seek_sequence.rs  streaming_parser.rs
crates/bharatcode-linux-sandbox/: Cargo.toml
crates/bharatcode-linux-sandbox/src/: lib.rs
crates/bharatcode-mcp/: README.md  (+1 more)
docs/: bharatcode-overview.md
oidc-proxy/: README.md  package.json  pnpm-lock.yaml  wrangler.toml
recipes/: bench.yaml
scripts/: README.md  build-windows.ps1  check-openapi-schema.sh  goose-db-helper.sh  run-benchmarks.sh  test_compaction.sh  test_mcp.sh  test_subagents.sh  test_subrecipes.sh
(+763 files in other folders)
