# Derived from OpenAI Codex `codex-linux-sandbox` (Apache-2.0, Copyright 2025 OpenAI).
# See LICENSES/LICENSE-codex and NOTICE.
[package]
name = "bharatcode-linux-sandbox"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
authors.workspace = true
description = "In-process Linux landlock + seccomp exec sandbox primitives, ported from OpenAI Codex (Apache-2.0)"

[lib]
name = "bharatcode_linux_sandbox"
path = "src/lib.rs"
doctest = false

[dependencies]
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.4"
seccompiler = "0.5.0"
libc = { version = "0.2.182", default-features = false, features = ["std"] }
